added message about not implemented method, small refactoring